# buster-ai

./: .env.example  .gitignore  .release-please-config.json  Dockerfile  README.md  SECURITY.md  docker-compose.yml  start.sh
api/: .cursorrules  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  makefile
api/.cursor/rules/: global.mdc  libs.mdc  prds.mdc  rest-rules.mdc  testing.mdc  tools.mdc  websocket-rules.mdc
api/migrations/2024-06-03-034617_create_organizations/: down.sql  up.sql
api/migrations/2024-06-03-034618_create_users/: up.sql
api/migrations/2024-06-03-034619_create_users_to_organizations/: down.sql  up.sql
api/migrations/2024-06-03-035237_create_api_keys/: down.sql  up.sql
api/migrations/2024-06-03-040003_create_teams/: down.sql  up.sql
api/migrations/2024-06-03-040138_create_teams_to_users/: down.sql  up.sql
api/migrations/2024-06-03-220858_create_data_sources/: down.sql  up.sql
api/migrations/2024-06-03-221241_create_datasets/: down.sql  up.sql
api/migrations/2024-06-03-221610_create_permission_groups/: down.sql  up.sql
api/migrations/2024-06-03-221828_create_datasets_to_permission_groups/: down.sql  up.sql
api/migrations/2024-06-03-222323_create_terms/: down.sql  up.sql
api/migrations/2024-06-03-223319_create_collections/: down.sql  up.sql
api/migrations/2024-06-03-223320_create_dashboards/: down.sql  up.sql
api/migrations/2024-06-03-223321_create_threads/: down.sql  up.sql
api/migrations/2024-06-03-223322_create_messages/: down.sql  up.sql
api/migrations/2024-06-03-224321_create_dashboard_versions/: down.sql  up.sql
api/migrations/2024-06-07-180843_create_dataset_columns/: down.sql  up.sql
api/migrations/2024-06-18-230440_create_threads_to_dashboards/: down.sql  up.sql
api/migrations/2024-07-08-175008_create_asset_permissions/: down.sql  up.sql
api/migrations/2024-07-08-175124_create_collections_to_assets/: down.sql  up.sql
api/migrations/2024-07-08-175134_permission_groups_to_identities/: down.sql  up.sql
api/migrations/2024-07-23-214547_create_user_favorites/: down.sql  up.sql
api/migrations/2024-07-24-194453_create_terms_to_datasets/: down.sql  up.sql
api/migrations/2024-08-06-220651_webhook_functions/: down.sql  up.sql
api/migrations/2024-08-09-224447_auth_user_creation/: down.sql  up.sql
api/migrations/2024-08-12-173526_cron_to_delete_anon_users/: down.sql  up.sql
api/migrations/2024-08-16-170337_stored_values_on_dataset_columns/: down.sql  up.sql
api/migrations/2024-11-14-155519_add_organization_id_to_thread/: down.sql  up.sql
api/migrations/2024-11-19-195358_add_entity_relationship_table/: down.sql  up.sql
api/migrations/2024-11-26-141715_add_env_to_data_sources/: down.sql  up.sql
api/migrations/2024-11-26-151750_add_unique_constraint_to_data_sources/: down.sql  up.sql
api/migrations/2024-11-26-170536_semantic_attributes/: down.sql  up.sql
api/migrations/2024-12-17-180014_sql_evaluations_table/: down.sql  up.sql
api/migrations/2024-12-20-203412_asset_search/: down.sql  up.sql
api/migrations/2024-12-23-200017_terms_search/: down.sql  up.sql
api/migrations/2025-01-01-212411_drop_webhooks_for_typesense/: down.sql  up.sql
api/migrations/2025-01-08-163102_add_dataset_groups_adjust_teams_adjust_permissions/: down.sql  up.sql
api/migrations/2025-01-09-044455_add_yaml_field_for_datasets/: down.sql  up.sql
api/migrations/2025-01-09-183703_add_unique_constraint_on_datasets/: down.sql  up.sql
api/migrations/2025-01-16-154339_rls_policies_on_new_tables/: down.sql  up.sql
api/migrations/2025-01-17-180051_user_attributes/: down.sql  up.sql
api/python/: sqlglot_optimizer.py  sqlglot_transpiler.py
api/src/: main.rs
api/src/buster_middleware/: auth.rs  cors.rs
api/supabase/: config.toml
cli/: .gitignore  Cargo.toml  README.md  VERSIONING.md  build.rs
cli/.cursor/: prds.mdc
cli/src/: error.rs  lib.rs  main.rs
cli/tests/: command_tests.rs  exclusion_test.rs  test_excluded_tags.sql
(+1434 files in other folders)
